--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
     </ul>
 
     <footer>
-      Project Hosted on <a href="http://github.com/mfliedner/buffon">Github</a>
+      Project hosted on <a href="https://mfliedner.github.io/">
+      mfliedner.github.io</a>, source code at <a href="http://github.com/mfliedner/buffon">
+      Github</a>
     </footer>
 
   </body>
