results panel styling

--- a/index.html
+++ b/index.html
@@ -88,16 +88,19 @@
       <input type='number' id='max' class='tosses'/>
     </div>
 
-    <ul id="statistics_panel" class="panel">
-      <li><span class="count">Tosses:</span><div id="count">0</div></li>
-      <li><span class="hits">Hits:</span><div id="hits">0</div></li>
-      <li><span class="misses">Misses:</span><div id="misses">0</div></li>
-      <li>
-        <span class="estimate">&pi;<sub>Buffon</sub>&nbsp;=&nbsp;</span>
-        <div id="estimate"></div>
-      </li>
-      <li><div class="pi">&pi; = 3.141592653589793</div></li>
-    </ul>
+    <div id="statistics_panel" class="panel">
+      <h2 class="header_title">Simulation Results</h2>
+      <ul>
+        <li><span class="count">Tosses:</span><div id="count">0</div></li>
+        <li><span class="hits">Hits:</span><div id="hits">0</div></li>
+        <li><span class="misses">Misses:</span><div id="misses">0</div></li>
+        <li>
+          <span class="estimate">&pi;<sub>Buffon</sub>&nbsp;=&nbsp;</span>
+          <div id="estimate"></div>
+        </li>
+        <li><div class="pi">&pi; = 3.141592653589793</div></li>
+      </ul>
+    </div>
 
     <footer>
       Project hosted on <a href="https://mfliedner.github.io/">
