styling clean up

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="./css/buffon_needle.css">
     <script src="lib/jquery-3.0.0.min.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script>
@@ -71,11 +69,11 @@
         <span id="hide_instructions">close</span>
       </header>
       <p>
-        Start or resume a simulation with the <span class="start">Start</span> button.
+        Start or resume a simulation with the <span class="start">&nbsp;Start&nbsp;</span> button.
         Unless you enter a <span class="max-tosses">Number of Tosses</span> larger than 0,
-        the simulation runs until you hit the <span class="stop">Stop</span> button.
+        the simulation runs until you hit the <span class="stop">&nbsp;Stop&nbsp;</span> button.
       </p><p>
-        Create a new simulation ("Restart") with the <span class="new">New</span> button.
+        Create a new simulation ("Restart") with the <span class="new">&nbsp;New&nbsp;</span> button.
       </p>
         Overlay panels can be dragged out of the way.
     </div>
